tests/ui/hygiene/pattern-macro.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/pattern-macro.rs:5:5
   |
LL |     x + 1;
   |     ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
